<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.pitlv.androidexamplesandtutorialsforbeginners.UserInputControls">

    <Button
        android:id="@+id/uic_toggle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/uic_toggle_button" />

    <Button
        android:id="@+id/uic_radio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/uic_radio_button" />

    <Button
        android:id="@+id/uic_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/uic_exit_text" />

    <Button
        android:id="@+id/uic_autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/uic_autocomplete" />

    <Button
        android:id="@+id/uic_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/uic_spinner" />

</LinearLayout>
