<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pitlv.androidexamplesandtutorialsforbeginners.MainActivity">

    <Button
        android:id="@+id/main_user_input_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/main_user_input_controls" />

    <Button
        android:id="@+id/main_menus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/main_menus" />

    <Button
        android:id="@+id/main_user_input_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/main_user_input_events" />

    <Button
        android:id="@+id/main_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/main_navigation" />

    <Button
        android:id="@+id/main_layouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="Layouts" />

    <Button
        android:id="@+id/main_misc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffaa22"
        android:text="@string/main_misc" />

</LinearLayout>
